--- a/analysis-complete-case/analysis-H1.Rmd
+++ b/analysis-complete-case/analysis-H1.Rmd
@@ -225,24 +225,13 @@ dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path(
 ## Estimated effect on the risk ratio scale
 
 ```{r}
-# Present results on the risk ratio scale
-significance_level <- 0.05
-n_terms_causal <- fit1$fit$dims$p
-n_terms_control <- fit1$fit$dims$q
-n_terms_total <- n_terms_causal + n_terms_control
-degrees_of_freedom <- n_participants_included_among_elig - n_terms_causal - n_terms_control
-critical_value <- qt(1 - significance_level/2, df = degrees_of_freedom)
+dat_result_causal <- as.data.frame(dat_result_causal)
 
-est_beta <- as.matrix(fit1$fit$beta_hat)
-est_covmat_beta <- fit1$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+exp_estimates <- exp(dat_result_causal[["Estimate"]])
+rrLB95 <- exp(dat_result_causal[["95% LCL"]])
+rrUB95 <- exp(dat_result_causal[["95% UCL"]])
 
-exp_estimates <- exp(est_beta)
-var_rr <- (exp_estimates) %*% est_covmat_beta %*% t(exp_estimates)
-stderr_rr <- sqrt(var_rr)
-rrLB95 <- exp_estimates - critical_value * stderr_rr
-rrUB95 <- exp_estimates + critical_value * stderr_rr
-
-dat_exp_scale <- data.frame(exp_estimates = exp_estimates, stderr_rr = c(stderr_rr), rrLB95 = c(rrLB95), rrUB95 = c(rrUB95))
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB95 = c(rrLB95), rrUB95 = c(rrUB95))
 
 dat_exp_scale
 ```
@@ -299,49 +288,29 @@ summary(fit2, show_control_fit = TRUE)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit2, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit2, show_control_fit = TRUE)[["control_variables"]]
+Lmat <- matrix(c(rep(1,8), seq(1,8,1)), byrow = FALSE, ncol = 2)
+
+fit <- fit2
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+dat_result2 <- rbind(dat_result_causal, dat_result_control)
+dat_result2 <- dat_result2[, c("90% LCL", "90% UCL")]
+dat_result <- cbind(dat_result, dat_result2)
+
+these_row_names <- rownames(dat_result)
+dat_result <- as.data.frame(dat_result)
+dat_result <- dat_result %>% select(Estimate, StdErr, `95% LCL`, `95% UCL`, `90% LCL`, `90% UCL`, everything()) 
+dat_result <- as.matrix(dat_result)
+row.names(dat_result) <- these_row_names
+
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_day.csv"), row.names = TRUE)
-```
-
-```{r, fig.width = 8, fig.height = 12}
-Lmat <- matrix(c(rep(1,8), seq(1,8,1)), byrow = FALSE, ncol = 2)
-dat_result_for_plotting <- summary(fit2, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
-dat_result_for_plotting <- dat_result_for_plotting[-c(1,2),]
-dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
-dat_result_for_plotting$days_since_start <- 1:8
-
-dat_result_for_plotting %>% 
-  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1, 8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
-
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear.png"), dpi = 1200)
-```
-
-```{r, fig.width = 8, fig.height = 12}
-Lmat <- matrix(c(rep(1,8), seq(1,8,1)), byrow = FALSE, ncol = 2)
-dat_result_for_plotting <- summary(fit2, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
-dat_result_for_plotting <- dat_result_for_plotting[-c(1,2),]
-dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
-dat_result_for_plotting$Estimate <- exp(dat_result_for_plotting$Estimate)
-dat_result_for_plotting$`95% LCL` <- exp(dat_result_for_plotting$`95% LCL`)
-dat_result_for_plotting$`95% UCL` <- exp(dat_result_for_plotting$`95% UCL`)
-dat_result_for_plotting$days_since_start <- 1:8
-
-dat_result_for_plotting %>% 
-  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
-
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "risk_ratio_scale_H1_linear.png"), dpi = 1200)
-```
-
-```{r, fig.width = 8, fig.height = 6}
-dat_result_for_plotting %>% 
-  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=2) + geom_point(size = 4) + geom_line(linewidth=2) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=2, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0.7,1.5), breaks = seq(0.7,1.5,0.10)) + theme(legend.position = "none") 
-
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "zoomed_risk_ratio_scale_H1_linear.png"), dpi = 1200)
 ```
 
 ## Hour of day
@@ -362,10 +331,26 @@ summary(fit2, show_control_fit = TRUE)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit2, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit2, show_control_fit = TRUE)[["control_variables"]]
+Lmat <- matrix(c(rep(1,25), seq(0,24,1)), byrow = FALSE, ncol = 2)
+
+fit <- fit2
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+dat_result2 <- rbind(dat_result_causal, dat_result_control)
+dat_result2 <- dat_result2[, c("90% LCL", "90% UCL")]
+dat_result <- cbind(dat_result, dat_result2)
+
+these_row_names <- rownames(dat_result)
+dat_result <- as.data.frame(dat_result)
+dat_result <- dat_result %>% select(Estimate, StdErr, `95% LCL`, `95% UCL`, `90% LCL`, `90% UCL`, everything()) 
+dat_result <- as.matrix(dat_result)
+row.names(dat_result) <- these_row_names
 
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_hour.csv"), row.names = TRUE)
@@ -391,42 +376,29 @@ summary(fit3, show_control_fit = TRUE)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit3, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit3, show_control_fit = TRUE)[["control_variables"]]
+Lmat <- matrix(c(rep(1,8), seq(1,8,1), seq(1,8,1)), byrow = FALSE, ncol = 3)
+
+fit <- fit3
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+dat_result2 <- rbind(dat_result_causal, dat_result_control)
+dat_result2 <- dat_result2[, c("90% LCL", "90% UCL")]
+dat_result <- cbind(dat_result, dat_result2)
+
+these_row_names <- rownames(dat_result)
+dat_result <- as.data.frame(dat_result)
+dat_result <- dat_result %>% select(Estimate, StdErr, `95% LCL`, `95% UCL`, `90% LCL`, `90% UCL`, everything()) 
+dat_result <- as.matrix(dat_result)
+row.names(dat_result) <- these_row_names
+
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_day.csv"), row.names = TRUE)
-```
-
-```{r, fig.width = 8, fig.height = 12}
-Lmat <- matrix(c(rep(1,8), seq(1,8,1), seq(1,8,1)), byrow = FALSE, ncol = 3)
-dat_result_for_plotting <- summary(fit3, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
-dat_result_for_plotting <- dat_result_for_plotting[-c(1:3),]
-dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
-dat_result_for_plotting$days_since_start <- 1:8
-
-dat_result_for_plotting %>% 
-  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1, 8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
-
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic.png"), dpi = 1200)
-```
-
-```{r, fig.width = 8, fig.height = 12}
-Lmat <- matrix(c(rep(1,8), seq(1,8,1), seq(1,8,1)), byrow = FALSE, ncol = 3)
-dat_result_for_plotting <- summary(fit3, show_control_fit = FALSE, lincomb = Lmat)[["causal_excursion_effect"]]
-dat_result_for_plotting <- dat_result_for_plotting[-c(1:3),]
-dat_result_for_plotting <- as.data.frame(dat_result_for_plotting)
-dat_result_for_plotting$Estimate <- exp(dat_result_for_plotting$Estimate)
-dat_result_for_plotting$`95% LCL` <- exp(dat_result_for_plotting$`95% LCL`)
-dat_result_for_plotting$`95% UCL` <- exp(dat_result_for_plotting$`95% UCL`)
-dat_result_for_plotting$days_since_start <- 1:8
-
-dat_result_for_plotting %>% 
-  ggplot(aes(x=days_since_start, y=Estimate, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=`95% LCL`, ymax=`95% UCL`), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
-
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H1", "risk_ratio_scale_H1_quadratic.png"), dpi = 1200)
 ```
 
 ## Hour of day
@@ -447,10 +419,26 @@ summary(fit3, show_control_fit = TRUE)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit3, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit3, show_control_fit = TRUE)[["control_variables"]]
+Lmat <- matrix(c(rep(1,25), seq(0,24,1), seq(0,24,1)), byrow = FALSE, ncol = 3)
+
+fit <- fit3
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
+
+dat_result_causal <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+dat_result2 <- rbind(dat_result_causal, dat_result_control)
+dat_result2 <- dat_result2[, c("90% LCL", "90% UCL")]
+dat_result <- cbind(dat_result, dat_result2)
+
+these_row_names <- rownames(dat_result)
+dat_result <- as.data.frame(dat_result)
+dat_result <- dat_result %>% select(Estimate, StdErr, `95% LCL`, `95% UCL`, `90% LCL`, `90% UCL`, everything()) 
+dat_result <- as.matrix(dat_result)
+row.names(dat_result) <- these_row_names
 
 # Format output to 3 decimal places
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_hour.csv"), row.names = TRUE)
@@ -610,24 +598,13 @@ dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path(
 ```
 
 ```{r}
-# Present results on the risk ratio scale
-significance_level <- 0.05
-n_terms_causal <- fit1$fit$dims$p
-n_terms_control <- fit1$fit$dims$q
-n_terms_total <- n_terms_causal + n_terms_control
-degrees_of_freedom <- n_participants_included_among_elig - n_terms_causal - n_terms_control
-critical_value <- qt(1 - significance_level/2, df = degrees_of_freedom)
+dat_result_causal <- as.data.frame(dat_result_causal)
 
-est_beta <- as.matrix(fit1$fit$beta_hat)
-est_covmat_beta <- fit1$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+exp_estimates <- exp(dat_result_causal[["Estimate"]])
+rrLB95 <- exp(dat_result_causal[["95% LCL"]])
+rrUB95 <- exp(dat_result_causal[["95% UCL"]])
 
-exp_estimates <- exp(est_beta)
-var_rr <- (exp_estimates) %*% est_covmat_beta %*% t(exp_estimates)
-stderr_rr <- sqrt(var_rr)
-rrLB95 <- exp_estimates - critical_value * stderr_rr
-rrUB95 <- exp_estimates + critical_value * stderr_rr
-
-dat_exp_scale <- data.frame(exp_estimates = exp_estimates, stderr_rr = c(stderr_rr), rrLB95 = c(rrLB95), rrUB95 = c(rrUB95))
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB95 = c(rrLB95), rrUB95 = c(rrUB95))
 
 dat_exp_scale
 ```
