Update complete case analysis: calculate 90% CIs for exploratory analysis.

--- a/analysis-complete-case/analysis-H2.Rmd
+++ b/analysis-complete-case/analysis-H2.Rmd
@@ -498,9 +498,6 @@ results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_c
 row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Day in Study")
 
 results_contrast
-
-# Format output to 3 decimal places
-results_contrast %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_day_contrast.csv"), row.names = TRUE)
 ```
 
 ```{r}
@@ -526,12 +523,21 @@ ucl_contrast <- est_contrast + se_contrast * critical_value
 test_stat_contrast <- est_contrast/se_contrast
 p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
 
-results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
-results_contrast$days_since_start <- 1:8
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast2) <- paste("High vs. Low at ", 1:8)
+```
+
+```{r}
+# Format output to 3 decimal places
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_day_contrast.csv"), row.names = TRUE)
 ```
 
 ```{r, fig.width = 8, fig.height = 12}
-dat_result_for_plotting <- results_contrast
+dat_result_for_plotting <- results_contrast2
+
+dat_result_for_plotting$days_since_start <- 1:8 
 
 dat_result_for_plotting %>% 
   ggplot(aes(x=days_since_start, y=est_contrast, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=lcl_contrast, ymax=ucl_contrast), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
@@ -540,10 +546,12 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H2", 
 ```
 
 ```{r, fig.width = 8, fig.height = 6}
-dat_result_for_plotting <- results_contrast
+dat_result_for_plotting <- results_contrast2
 dat_result_for_plotting$est_contrast <- exp(dat_result_for_plotting$est_contrast)
 dat_result_for_plotting$lcl_contrast <- exp(dat_result_for_plotting$lcl_contrast)
 dat_result_for_plotting$ucl_contrast <- exp(dat_result_for_plotting$ucl_contrast)
+
+dat_result_for_plotting$days_since_start <- 1:8 
 
 dat_result_for_plotting %>% 
   ggplot(aes(x=days_since_start, y=est_contrast, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=2) + geom_point(size = 4) + geom_line(linewidth=2) + geom_ribbon(aes(ymin=lcl_contrast, ymax=ucl_contrast), linetype=3, linewidth=2, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0.7,2.0), breaks = seq(0.7,1.5,0.10)) + theme(legend.position = "none") 
@@ -552,15 +560,78 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H2", 
 ```
 
 ```{r, fig.width = 8, fig.height = 12}
-dat_result_for_plotting <- results_contrast
+dat_result_for_plotting <- results_contrast2
 dat_result_for_plotting$est_contrast <- exp(dat_result_for_plotting$est_contrast)
 dat_result_for_plotting$lcl_contrast <- exp(dat_result_for_plotting$lcl_contrast)
 dat_result_for_plotting$ucl_contrast <- exp(dat_result_for_plotting$ucl_contrast)
+
+dat_result_for_plotting$days_since_start <- 1:8 
 
 dat_result_for_plotting %>% 
   ggplot(aes(x=days_since_start, y=est_contrast, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=lcl_contrast, ymax=ucl_contrast), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H2", "risk_ratio_scale_H2_linear.png"), dpi = 1200)
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(c(1,0,-1,0,
+                 0,1,0,-1), nrow = 2, byrow = TRUE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Day in Study")
+
+results_contrast
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,8),
+                     seq(1,8,1),
+                     rep(-1,8),
+                     -1*seq(1,8,1)), ncol = 4, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast2) <- paste("High vs. Low at ", 1:8)
+```
+
+```{r}
+# Format output to 3 decimal places
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_day_contrast_CI90.csv"), row.names = TRUE)
 ```
 
 ## Hour of day
@@ -668,9 +739,106 @@ results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_c
 row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Hour")
 
 results_contrast
+```
 
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,25),
+                     seq(0,24,1),
+                     rep(-1,25),
+                     -1*seq(0,24,1)), ncol = 4, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.95
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast2) <- paste("High vs. Low at ", 0:24)
+```
+
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+```
+
+```{r}
 # Format output to 3 decimal places
-results_contrast %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_hour_contrast.csv"), row.names = TRUE)
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_hour_contrast.csv"), row.names = TRUE)
+```
+
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(c(1,0,-1,0,
+                 0,1,0,-1), nrow = 2, byrow = TRUE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Hour")
+
+results_contrast
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,25),
+                     seq(0,24,1),
+                     rep(-1,25),
+                     -1*seq(0,24,1)), ncol = 4, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast2) <- paste("High vs. Low at ", 0:24)
+```
+
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+```
+
+```{r}
+# Format output to 3 decimal places
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_linear_hour_contrast_CI90.csv"), row.names = TRUE)
 ```
 
 # Exploratory Analysis (Quadratic Effect of Time)
@@ -794,9 +962,6 @@ results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_c
 row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Day in Study", "Indicator for High vs. Low x Square of Day in Study")
 
 results_contrast
-
-# Format output to 3 decimal places
-results_contrast %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_day_contrast.csv"), row.names = TRUE)
 ```
 
 ```{r}
@@ -824,12 +989,23 @@ ucl_contrast <- est_contrast + se_contrast * critical_value
 test_stat_contrast <- est_contrast/se_contrast
 p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
 
-results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
-results_contrast$days_since_start <- 1:8
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+
+row.names(results_contrast2) <- paste("High vs. Low at ", 1:8)
 ```
 
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+
+# Format output to 3 decimal places
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_day_contrast.csv"), row.names = TRUE)
+```
+
+
 ```{r, fig.width = 8, fig.height = 12}
-dat_result_for_plotting <- results_contrast
+dat_result_for_plotting <- results_contrast2
+
+dat_result_for_plotting$days_since_start <- 1:8
 
 dat_result_for_plotting %>% 
   ggplot(aes(x=days_since_start, y=est_contrast, color="red")) + geom_hline(yintercept=0, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=lcl_contrast, ymax=ucl_contrast), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on log scale", limits=c(-1.5,1.0), breaks = seq(-1.5,1.0,0.10)) + theme(legend.position = "none") 
@@ -838,15 +1014,82 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H2", 
 ```
 
 ```{r, fig.width = 8, fig.height = 12}
-dat_result_for_plotting <- results_contrast
+dat_result_for_plotting <- results_contrast2
 dat_result_for_plotting$est_contrast <- exp(dat_result_for_plotting$est_contrast)
 dat_result_for_plotting$lcl_contrast <- exp(dat_result_for_plotting$lcl_contrast)
 dat_result_for_plotting$ucl_contrast <- exp(dat_result_for_plotting$ucl_contrast)
+
+dat_result_for_plotting$days_since_start <- 1:8
 
 dat_result_for_plotting %>% 
   ggplot(aes(x=days_since_start, y=est_contrast, color="red")) + geom_hline(yintercept=1, linetype=1, color = "black", size=1) + geom_point(size = 2) + geom_line(linewidth=1) + geom_ribbon(aes(ymin=lcl_contrast, ymax=ucl_contrast), linetype=3, linewidth=1, alpha=0.2) + scale_x_continuous(name="Day (t)", limits=c(1,8), breaks = seq(1,8,1)) + scale_y_continuous(name="Estimate on risk ratio scale", limits=c(0,2), breaks = seq(0,2,0.10)) + theme(legend.position = "none") 
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H2", "risk_ratio_scale_H2_quadratic.png"), dpi = 1200)
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(c(1,0,0,-1,0,0,
+                 0,1,0,0,-1,0,
+                 0,0,1,0,0,-1), nrow = 3, byrow = TRUE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Day in Study", "Indicator for High vs. Low x Square of Day in Study")
+
+results_contrast
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,8),
+                     seq(1,8,1),
+                     seq(1,8,1) * seq(1,8,1),
+                     -1*rep(1,8),
+                     -1*seq(1,8,1),
+                     -1*seq(1,8,1) * seq(1,8,1)), ncol = 6, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+
+row.names(results_contrast2) <- paste("High vs. Low at ", 1:8)
+```
+
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+
+# Format output to 3 decimal places
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_day_contrast_CI90.csv"), row.names = TRUE)
 ```
 
 ## Hour of day
@@ -958,9 +1201,108 @@ results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_c
 row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Hour", "Indicator for High vs. Low x Square of Hour")
 
 results_contrast
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,25),
+                     seq(0,24,1),
+                     seq(0,24,1) * seq(0,24,1),
+                     -1*rep(1,25),
+                     -1*seq(0,24,1),
+                     -1*seq(0,24,1) * seq(0,24,1)), ncol = 6, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.95
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+
+row.names(results_contrast2) <- paste("High vs. Low at ", 0:24)
+```
+
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
 
 # Format output to 3 decimal places
-results_contrast %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_hour_contrast.csv"), row.names = TRUE)
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_hour_contrast.csv"), row.names = TRUE)
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(c(1,0,0,-1,0,0,
+                 0,1,0,0,-1,0,
+                 0,0,1,0,0,-1), nrow = 3, byrow = TRUE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+row.names(results_contrast) <- c("Indicator for High vs. Low", "Indicator for High vs. Low x Hour", "Indicator for High vs. Low x Square of Hour")
+
+results_contrast
+```
+
+```{r}
+n_terms_control <- fit1_converted$fit$dims$q
+n_terms_total <- fit1_converted$fit$dims$q + fit1_converted$fit$dims$p
+
+Lmat <- matrix(cbind(rep(1,25),
+                     seq(0,24,1),
+                     seq(0,24,1) * seq(0,24,1),
+                     -1*rep(1,25),
+                     -1*seq(0,24,1),
+                     -1*seq(0,24,1) * seq(0,24,1)), ncol = 6, byrow = FALSE)
+causal_est <- as.matrix(fit1_converted$fit$beta_hat)
+causal_vcov_adjusted <- fit1_converted$fit$varcov_adjusted[(n_terms_control + 1):n_terms_total,(n_terms_control + 1):n_terms_total]
+
+est_contrast <- Lmat %*% causal_est
+vcov_contrast <- Lmat %*% causal_vcov_adjusted %*% t(Lmat)
+se_contrast <- sqrt(diag(vcov_contrast))
+
+conf_level <- 0.90
+degrees_of_freedom <- fit1_converted$df
+critical_value <- qt(1 - (1 - conf_level) / 2, df = degrees_of_freedom)
+lcl_contrast <- est_contrast - se_contrast * critical_value
+ucl_contrast <- est_contrast + se_contrast * critical_value
+test_stat_contrast <- est_contrast/se_contrast
+p_value_contrast <- 2 * pt(abs(test_stat_contrast), df = degrees_of_freedom, lower.tail = FALSE)  # two-sided
+
+results_contrast2 <- data.frame(est_contrast = est_contrast, lcl_contrast = lcl_contrast, ucl_contrast = ucl_contrast, se_contrast = se_contrast, test_stat_contrast = test_stat_contrast, degrees_of_freedom = degrees_of_freedom, p_value = p_value_contrast)
+
+row.names(results_contrast2) <- paste("High vs. Low at ", 0:24)
+```
+
+```{r}
+results_contrast_all <- rbind(results_contrast, results_contrast2)
+
+# Format output to 3 decimal places
+results_contrast_all %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H2", "log_risk_ratio_scale_H2_quadratic_hour_contrast_CI90.csv"), row.names = TRUE)
 ```
 
 # H2 Sensitivity Analysis
